<resources>
    <string name="app_name">Home School</string>
    <string-array name="perfilUsuario">
        <item>Escolha um perfil</item>
        <item>Professor</item>
        <item>Aluno</item>
    </string-array>
    <string-array name="turmas_escola">
        <item>Escolha uma turma</item>
        <item>1° Ano Fundamental</item>
        <item>2° Ano Fundamental</item>
        <item>3° Ano Fundamental</item>
        <item>4° Ano Fundamental</item>
        <item>5° Ano Fundamental</item>
        <item>6° Ano Fundamental</item>
        <item>7° Ano Fundamental</item>
        <item>8° Ano Fundamental</item>
        <item>9° Ano Fundamental</item>
        <item>1° Ano Médio</item>
        <item>2° Ano Médio</item>
        <item>3° Ano Médio</item>
    </string-array>
    <string-array name="materias_escola">
        <item>Escolha uma matéria</item>
        <item>Português</item>
        <item>Matemática</item>
        <item>História</item>
        <item>Geografia</item>
        <item>Filosofia</item>
        <item>Sociologia</item>
        <item>Física</item>
        <item>Química</item>
        <item>Biologia</item>
        <item>Inglês</item>
        <item>Espanhol</item>
        <item>Ciências</item>
    </string-array>
    <string name="login">Login</string>
    <string name="email_Login">Email</string>
    <string name="senha_Login">Senha</string>
    <string name="logar">Logar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="cadastroNovoUsuario">Cadastro</string>
    <string name="user_Cadastro">Nome Completo</string>
    <string name="email_Cadastro">Email</string>
    <string name="senha_Cadastro">Senha</string>
    <string name="registrar">Registrar</string>
    <string name="voltar">Voltar</string>
    <string name="txt_recuperar_senha_user">Recuperar Senha</string>
    <string name="btn_recuperar_senha">Recuperar</string>
    <string name="btn_retornar_login">Voltar</string>
    <string name="txt_nome_recuperar_senha">Nome Compelto</string>
    <string name="txt_email_recuperar_senha">Email</string>
    <string name="txt_descricao_imagem_perfil">Perfil</string>
    <string name="txt_title_dialog_recuperar_senha">Senha Recuperada</string>
    <string name="btn_dialog_recuperar_senha_ok">OK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Log Out</string>
    <string name="profile_menu_aluno">Perfil</string>
    <string name="nav_header_title_professor">Professor</string>
    <string name="nav_header_email_professor">professor@homeschool.com</string>
    <string name="nav_header_materia_professor">Matéria</string>
    <string name="menu_home">Perfil</string>
    <string name="menu_nova_atividade">Adicionar Atividade</string>
    <string name="menu_novo_conteudo">Adicionar Conteudo</string>
    <string name="menu_atividades_recebidas">Atividades Recebidas</string>
    <string name="menu_duvidas_atividades_recebidas">Atividades</string>
    <string name="menu_duvidas_conteudos_recebidas">Conteudos</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="title_activity_main_professor_content">MainProfessorContentActivity</string>
    <string name="professor_email">Email</string>
    <string name="professor_nome">Nome</string>
    <string name="professor_materia">Matéria</string>
    <string name="btn_professor_atualiza_perfil">Atualizar</string>
    <string name="description_cadastro_atividades">Informações sobre a atividade</string>
    <string name="nome_professor_cadastro_atividades">Nome completo</string>
    <string name="materia_professor_cadastro_atividades">Matéria</string>
    <string name="titulo_cadastro_atividades">Título</string>
    <string name="conteudo_cadastro_atividades">Digite aqui o conteúdo</string>
    <string name="caminho_arquivo_atividades">Nenhum arquivo selecionado.</string>
    <string name="btn_procurar_conteudo_cadastro_atividades">Procurar</string>
    <string name="btn_adicionar_conteudo_cadastro_atividades">Adicionar</string>
    <string name="description_cadastro_conteudo">Conteudo</string>
    <string name="nome_professor_cadastro_conteudo">Nome completo</string>
    <string name="materia_professor_cadastro_conteudo">Matéria</string>
    <string name="titulo_cadastro_conteudo">Título</string>
    <string name="conteudo_cadastro_conteudo">Digite aqui o conteúdo</string>
    <string name="caminho_arquivo_conteudo">Nenhum arquivo selecionado.</string>
    <string name="btn_procurar_conteudo_cadastro_conteudo">Procurar</string>
    <string name="btn_adicionar_conteudo_cadastro_conteudo">Adicionar</string>
    <string name="titulo_atividade_recebida_professor">Titulo da Atividade</string>
    <string name="nome_aluno_atividade_recebida_professor">Nome do aluno</string>
    <string name="materia_atividade_recebida_professor">Materia</string>
    <string name="informa_sem_atividade_recebida">Nenhuma atividade recebida até o momento</string>
    <string name="detalhes_titulo_atividade_concluida_aluno">Titulo da Atividade</string>
    <string name="detalhes_nome_atividade_concluida_aluno">Nome do aluno</string>
    <string name="detalhes_materia_atividade_concluida_aluno">Materia</string>
    <string name="detalhes_caminho_atividade_concluida_aluno">Caminho do arquivo</string>
    <string name="titulo_recebe_duvidas_aluno">Titulo da Atividade</string>
    <string name="nome_aluno_duvida_atividade">Nome do aluno</string>
    <string name="materia_duvida_atividade_aluno">Materia</string>
    <string name="turma_aluno_atividade_duvida">Turma</string>
    <string name="informa_sem_duvidas_atividades_aluno_recebidas">Nenhuma dúvida referente a atividades recebida até o momento</string>
    <string name="titulo_duvidas_conteudo_aluno">Titulo do conteudo</string>
    <string name="nome_aluno_duvida_conteudo">Nome do aluno</string>
    <string name="materia_duvida_conteudo_aluno">Materia</string>
    <string name="turma_aluno_conteudo_duvida">Turma</string>
    <string name="informa_sem_duvidas_conteudo_aluno_recebidas">Nenhuma dúvida referente a conteúdo recebida até o momento</string>
    <string name="nav_header_title_aluno">Aluno</string>
    <string name="nav_header_subtitle_aluno_turma">1° Ensino Medio</string>
    <string name="nav_header_subtitle_aluno">aluno@homeschool.com</string>
    <string name="menu_home_aluno">Perfil</string>
    <string name="menu_atividade_aluno">Atividade</string>
    <string name="menu_conteudo_aluno">Conteudo</string>
    <string name="menu_atividades_enviadas">Enviar Atividade</string>
    <string name="menu_duvidas_atividades">Atividades</string>
    <string name="menu_duvidas_conteudo">Conteudo</string>
    <string name="title_activity_main_aluno_content">MainAlunoContentActivity</string>
    <string name="aluno_email">Email</string>
    <string name="aluno_nome">Nome</string>
    <string name="aluno_turma">Turma</string>
    <string name="btn_aluno_atualiza_perfil">Atualizar</string>
    <string name="titulo_atividade_recebida">Titulo da Atividade</string>
    <string name="nome_professor_atividade_recebida">Nome do professor</string>
    <string name="materia_atividade_recebida">Materia</string>
    <string name="titulo_conteudo_recebido">Titulo do Conteudo</string>
    <string name="nome_professor_conteudo_recebido">Nome do professor</string>
    <string name="materia_conteudo_recebido">Materia</string>
    <string name="nome_aluno_atividades_concluida">Nome completo</string>
    <string name="titulo_atividades_concluida">Título</string>
    <string name="turma_atividades_concluida">Turma</string>
    <string name="caminho_arquivo_atividade_concluida">Nenhum arquivo selecionado.</string>
    <string name="informa_envio_atividade_concluida">Por favor aguarde, enviando...</string>
    <string name="btn_procurar_arquivo_atividade_concluida">Procurar</string>
    <string name="btn_enviar_atividade_concluida">Enviar</string>
    <string name="nome_aluno_atividade_duvida_recebida">Nome do aluno</string>
    <string name="titulo_duvidas_atividade_recebido">Titulo da atividade com duvida</string>
    <string name="descricao_duvidas_atividade">Descrever as suas duvidas sobre a atividade</string>
    <string name="recebe_duvidas_atividade_recebido">Nenhuma atividade com dúvida selecionada.</string>
    <string name="enviar_atividade_duvida">Enviar</string>
    <string name="titulo_duvidas_conteudo">Titulo do conteudo com duvida</string>
    <string name="nome_aluno_conteudo_duvida_recebida">Nome completo</string>
    <string name="descricao_duvida_conteudo">Descrever suas duvidas sobre conteudo</string>
    <string name="recebe_arquivo_conteudo_duvida">Nenhum conteudo com duvida adicionado</string>
    <string name="enviar_conteudo_duvida">Enviar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detalhes_atividade">Detalhes Atividade</string>
    <string name="informa_sem_atividade_recedida">Nenhuma atividade cadastrada até o momento</string>
    <string name="informa_sem_conteudo_recedido">Nenhum conteudo cadastrado até o momento</string>
    <string name="doc_detalhes_atividade_concluida">Documento referente a atividade</string>
    <string name="erro_informacoes_aluno_bundle">Não foi possível recuperar as informações do aluno</string>
    <string name="erro_informacoes_professor_bundle">Não foi possível recuperar as informações do professor</string>
    <string name="campos_obrigatorios_professor">Todas as informações devem ser preenchidas!</string>
    <string name="sucesso_enviar_nova_atividade">Atividade concluída enviada para o professor.</string>
    <string name="falha_enviar_nova_atividade">Problemas ao realizar o envio da atividade para os alunos.</string>
    <string name="campos_obrigatorios_aluno">Todas as informações devem ser preenchidas!</string>
    <string name="erro_upload_arquivo">Ocorreu um erro ao realizar o upload do arquivo.</string>
    <string name="nenhum_arquivo_encontrado">Nenhum arquivo encontrado.</string>
    <string name="sucesso_enviar_atividade_concluida">Atividade concluída enviada para o professor.</string>
    <string name="sucesso_enviar_duvida_atividade_concluida">Dúvidas sobre a atividade concluída enviada para o professor.</string>
    <string name="sucesso_enviar_duvida_conteudo">Dúvidas sobre o conteúdo enviada para o professor.</string>
    <string name="falha_enviar_atividade_concluida">Problemas ao realizar o envio da atividade para professor.</string>
    <string name="falha_enviar_duvida_conteudo">Problemas ao realizar o envio do conteudo para professor.</string>
    <string name="falha_enviar_duvida_atividade_concluida">Problemas ao realizar o envio das dúvidas sobre a atividade para professor.</string>
    <string name="permissao_leitura_storage">Para perfeito funcionamento do alicativo,
        se faz necessário aceitar as permissões de leitura</string>
    <string name="erro_detalhes_atividade_bundle">Não foi possível recuperar as informações da atividade</string>
    <string name="informa_download_arquivo">Download em andamento.</string>
    <string name="erro_detalhes_conteudo_bundle">Não foi possível recuperar as informações do conteúdo</string>
   <string name="campos_obrigatorios_nova_atividade">Todas as informações da atividade devem ser preenchidas.</string>
    <string name="campos_obrigatorios_novo_conteudo">Todas as informações do conteúdo devem ser preenchidas.</string>
    <string name="sucesso_enviar_novo_conteudo">Novo conteúdo enviado para os alunos.</string>
    <string name="falha_enviar_novo_conteudo">Problemas ao realizar o envio do novo conteúdo para os alunos.</string>
</resources>