<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/text_Login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@color/baseThemeColor"/>

        <EditText
        android:id="@+id/editEmail_Login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/email_Login"
        android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editSenha_Login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/senha_Login"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_Logar"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="390dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="311dp"
        android:textColor="@color/cor_branca"
        android:text="@string/logar"
        android:background="@color/baseThemeColor"/>

        <Button
            android:id="@+id/btn_cadastrar"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="470dp"
            android:elevation="2px"
            android:textColor="@color/baseThemeColor"
            android:background="@drawable/shape_custom_button"
            android:text="@string/cadastrar" />
    <TextView
        android:id="@+id/textEsqueciaSenha"
        android:layout_width="200dp"
        android:layout_height="23dp"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/baseThemeColor"
        android:text="@string/esqueci_a_senha" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>