<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RecuperarSenhaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/txt_recuperar_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/baseThemeColor"
            android:text="@string/txt_recuperar_senha_user"
            android:textAlignment="center"
            android:textSize="30sp"
            android:gravity="center_horizontal"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/user"/>

        <EditText
            android:id="@+id/edt_nome_recuperar_senha"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/txt_nome_recuperar_senha"
            android:textColor="@color/baseThemeColor"
            android:textColorHint="@color/baseThemeColor"
            android:inputType="textCapSentences"
            android:importantForAutofill="no" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="230dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/at"/>

        <EditText
            android:id="@+id/edt_email_recuperar_senha"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/txt_email_recuperar_senha"
            android:textColor="@color/baseThemeColor"
            android:textColorHint="@color/baseThemeColor"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="325dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/perfil"
            android:contentDescription="@string/txt_descricao_imagem_perfil" />

        <Spinner
            android:id="@+id/spn_perfil"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="320dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_resetar_senha"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="430dp"
            android:background="@color/baseThemeColor"
            android:textColor="@color/cor_branca"
            android:text="@string/btn_recuperar_senha" />

            <Button
                android:id="@+id/btn_voltar_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="510dp"
                android:text="@string/btn_retornar_login"
                android:textColor="@color/baseThemeColor"
                android:background="@drawable/shape_custom_button"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>