<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".content.aluno.ui.duvidas_atividade.DuvidasAtividadesConcluidasFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/txt_nome_professor_duvida_atividade"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:text="@string/nome_professor_cadastro_atividades"
            android:textColor="@color/baseThemeColor"
            android:textColorHint="@color/baseThemeColor"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/txt_turma_aluno_duvida_atividade"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:text="@string/turma_aluno_atividade_duvida"
            android:textColor="@color/baseThemeColor"
            android:textColorHint="@color/baseThemeColor"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/edt_titulo_atividade_concluida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/titulo_duvidas_atividade_recebido"
            android:textColor="@color/baseThemeColor"
            android:textColorHint="@color/baseThemeColor"/>


        <ImageView
            android:id="@+id/img_materia_professor_ic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/team"
            android:layout_marginTop="140dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>

        <Spinner
            android:id="@+id/spn_materia_professor"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/edt_duvidas_atividades_enviada"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="180dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:lines="10"
            android:hint="@string/descricao_duvidas_atividade"
            android:textColor="@color/baseThemeColor"
            android:textColorHint="@color/baseThemeColor"/>

        <TextView
            android:id="@+id/txt_recebe_duvida_arquivo_ativ_concluida"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="290dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/recebe_duvidas_atividade_recebido"
            android:textColor="@color/baseThemeColor"
            android:textColorHint="@color/baseThemeColor"
            android:textAlignment="center"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_procurar_atividade_duvida"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="350dp"
            android:text="@string/btn_procurar_conteudo_cadastro_atividades"
            android:drawableLeft="@mipmap/internet"/>

        <Button
            android:id="@+id/btn_enviar_atividade_duvida"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="430dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/enviar_atividade_duvida" />

    </RelativeLayout>

    <include
        android:id="@+id/progressbar_informa_upload"
        android:visibility="gone"
        layout="@layout/upload_content_progressbar_homeschool"/>

</androidx.constraintlayout.widget.ConstraintLayout>